# edX-Advanced-Cpp

./: .clang-format  .gitignore  CMakeLists.txt  Invoke-All-Build.ps1  Invoke-All-Rebuild.ps1  Invoke-Install.ps1  New-BuildScript.ps1
Common/: Generic_Algorithms.hpp  Referenced_Object.hpp  Some_Object.hpp  memory_leak_detect.h
Exceptions/: Handling Exceptions - Ex1.cpp
Exceptions/Allocation/: Bad_Alloc.cpp  Caching.cpp  Customising_Memory_Allocation.cpp
Exceptions/Casting/: Copy_Constructors_And_Assignment.cpp  Examples.cpp  Explicit_Keyword.cpp  Mutable_Keyword.cpp  User_Defined_Conversion.cpp
Exceptions/Construction and Deconstruction/: Controlling_Timing.cpp
Iterators/Defining_Classes/: Defining_Smart_Pointers_For_Garbage_Collection.cpp  Reference_Counted_Strings.cpp  That_Use_Shared_Representation_Objects.cpp
Iterators/Functions/: Creating_Multidimensional_Containers.cpp  Function_Objects.cpp  Overloading_Indexing_Operator.cpp
Iterators/Standard_Iterators/: Creating_Generic_Algorithms.cpp  Standard_Iterators.cpp
Patterns/Base_Classes/: Mixin_Classes.cpp  Run_Type_Type_Information.cpp  Virtual_Base_Classes.cpp
Patterns/Defining_Interfaces/: Defining_Interfaces.cpp  Multiple_Inheritance.cpp
Patterns/Function_Pointers/: Implementing_Callbacks_using_Function_Pointers.cpp  Member_Function_Pointers.cpp  The_Command_Pattern.cpp
Patterns/Inheritance/: Class_Adapter_Pattern.cpp  Private_And_Protected_Inheritance.cpp  Static_Class_Members.cpp
Patterns/Namespaces/: Association_And_Delegation_Recap.cpp  Using_Namespaces_Effectively.cpp
Patterns/Patterns/: Null_Object.cpp  Object_Adapter.cpp  Proxy.cpp
Patterns/Singleton_Pattern/: Defining_Nested_Classes.cpp  Handle_Body_Idiom.cpp  Singleton_Pattern.cpp
Patterns/Smart_Pointers/: Defining_Smart_Pointers.cpp  Lazy_Loading.cpp
Templates/Template_Adapters/: Defining_Template_Adapters.cpp  Defining_Trait_Classes.cpp  Specializing_Templates.cpp  Specifying_Default_Template_Parameters.cpp
Templates/Template_Functions/: Defining_Non_Type_Template_Parameters.cpp  Implementing_Generic_Algorithms.cpp  Overview.cpp  Standard_Container_Classes.cpp  Template_Functions.cpp
